edited the product page to get data from the homepage listings so that it matches the product was

--- a/html/product.html
+++ b/html/product.html
@@ -29,44 +29,29 @@
         <!-- Product Images -->
         <div class="product-images">
             <div class="main-image">
-                <img id="mainProductImage" src="https://i.ibb.co/47Sk9QL/product-1.jpg" alt="Main Product Image">
+                <img id="mainProductImage" src="" alt="Main Product Image">
             </div>
             <div class="thumbnail-grid">
-                <img class="thumbnail active" src="https://i.ibb.co/47Sk9QL/product-1.jpg" alt="Thumbnail 1">
-                <img class="thumbnail" src="https://i.ibb.co/b7ZVzYr/product-2.jpg" alt="Thumbnail 2">
-                <img class="thumbnail" src="https://via.placeholder.com/100" alt="Thumbnail 3">
-                <img class="thumbnail" src="https://via.placeholder.com/100" alt="Thumbnail 4">
+                <img class="thumbnail active" src="" alt="Thumbnail 1">
             </div>
         </div>
 
         <!-- Product Info -->
         <div class="product-info">
-            <h1 class="product-title">Premium Cotton T-Shirt</h1>
+            <h1 class="product-title"></h1>
             <div class="price-rating">
-                <p class="product-price">$49.99</p>
-                <div class="rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <span>(128 reviews)</span>
-                </div>
+                <p class="product-price"></p>
+                <div class="rating"></div>
             </div>
             
             <div class="product-description">
                 <h3>Description</h3>
-                <p>High-quality 100% cotton t-shirt with premium finish. Available in various sizes and colors. Perfect for casual wear or sports activities.</p>
+                <p></p>
             </div>
 
             <div class="product-specs">
                 <h3>Specifications</h3>
-                <ul>
-                    <li><strong>Material:</strong> 100% Organic Cotton</li>
-                    <li><strong>Size:</strong> S, M, L, XL</li>
-                    <li><strong>Colors:</strong> Red, Blue, Black, White</li>
-                    <li><strong>Care:</strong> Machine wash cold</li>
-                </ul>
+                <ul></ul>
             </div>
 
             <button class="add-to-cart-btn">Add to Cart</button>
@@ -75,32 +60,17 @@
         <!-- Seller Information -->
         <div class="seller-info">
             <div class="seller-header">
-                <img src="https://via.placeholder.com/50" alt="Seller Avatar" class="seller-avatar">
+                <img class="seller-avatar" src="" alt="Seller Avatar">
                 <div class="seller-details">
-                    <h3>John's Fashion Store</h3>
-                    <div class="seller-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                        <i class="far fa-star"></i>
-                        <span>4.3 (256 reviews)</span>
-                    </div>
+                    <h3></h3>
+                    <div class="seller-rating"></div>
                 </div>
             </div>
             
             <div class="seller-stats">
                 <div class="stat-item">
                     <i class="fas fa-clock"></i>
-                    <span>Usually responds within 1 hour</span>
-                </div>
-                <div class="stat-item">
-                    <i class="fas fa-shipping-fast"></i>
-                    <span>Free shipping available</span>
-                </div>
-                <div class="stat-item">
-                    <i class="fas fa-check-circle"></i>
-                    <span>Verified Seller</span>
+                    <span></span>
                 </div>
             </div>
 
@@ -110,29 +80,6 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bottom-bar">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="../image/mokesell-logo.jpeg" alt="MokeSell-bottom-Logo">
-            </div>
-            <div class="bottom-bar-text">
-                <h2>Unlock the Power of MokeSell</h2>
-                <p>Download the App Now!</p>
-                <div class="app-buttons">
-                    <a href="https://www.apple.com/app-store/" target="_blank" class="app-store">
-                        <img width="30" height="30" src="../image/applestore.png" alt="App Store">
-                        <span>Download on App Store</span>
-                    </a>
-                    <a href="https://play.google.com/store" target="_blank" class="google-play">
-                        <img width="30" height="30" src="../image/googleplay.png" alt="Google Play">
-                        <span>Get it on Google Play</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script src="../script/product.js"></script>
+    <script type="module" src="../script/product.js"></script>
 </body>
 </html>
