add image for the category and change abit of the element in html

--- a/html/home.html
+++ b/html/home.html
@@ -62,24 +62,25 @@
         <div class="categories">
             <h2>What would you like to find?</h2>
             <div class="category-grid">
-                <div class="category-item">
-                    <img src="https://via.placeholder.com/50" alt="Women's Fashion">
+                <div class="category-item" data-category="womens-fashion">
+                    <img src="../image/womenfashion.jpeg" alt="Women's Fashion">
                     <p>Women's Fashion</p>
                 </div>
-                <div class="category-item">
-                    <img src="https://via.placeholder.com/50" alt="Men's Fashion">
+                <div class="category-item" data-category="mens-fashion">
+                    <img src="../image/men'sfashion.jpeg" alt="Men's Fashion">
                     <p>Men's Fashion</p>
                 </div>
-                <div class="category-item">
-                    <img src="https://via.placeholder.com/50" alt="Mobile Phones & Gadgets">
+                <div class="category-item" data-category="gadgets">
+                    <img src="../image/phone.jpg" alt="Mobile Phones & Gadgets">
                     <p>Mobile Phones & Gadgets</p>
                 </div>
-                <div class="category-item">
+                <div class="category-item" data-category="luxury">
                     <img src="https://via.placeholder.com/50" alt="Luxury">
                     <p>Luxury</p>
                 </div>
             </div>
         </div>
+
 
         <a href="product.html" class="product-link">
         <div class="product-grid">
