--- a/html/home.html
+++ b/html/home.html
@@ -81,74 +81,9 @@
             </div>
         </div>
 
-
         <a href="product.html" class="product-link">
-        <div class="product-grid">
-            <!-- Product Card 1 -->
-            <div class="product-card">
-                <img src="https://i.ibb.co/47Sk9QL/product-1.jpg" alt="Product" class="product-image">
-                <div class="product-info">
-                    <h4 class="product-title">Premium Cotton T-Shirt</h4>
-                    <div class="rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p class="product-price">$49.99</p>
-                    <button class="btn">Add to Cart</button>
-                </div>
-            </div>
-
-            <!-- Product Card 2 -->
-            <div class="product-card">
-                <img src="https://i.ibb.co/b7ZVzYr/product-2.jpg" alt="Product" class="product-image">
-                <div class="product-info">
-                    <h4 class="product-title">Classic Denim Jeans</h4>
-                    <div class="rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p class="product-price">$79.99</p>
-                    <button class="btn">Add to Cart</button>
-                </div>
-            </div>
-
-          <div class="product-card">
-            <img src="https://i.ibb.co/b7ZVzYr/product-2.jpg" alt="Product" class="product-image">
-            <div class="product-info">
-                <h4 class="product-title">iphone 16 pro max</h4>
-                <div class="rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <p class="product-price">$1899.99</p>
-                <button class="btn">Add to Cart</button>
-            </div>            
-        </div>
-          <div class="product-card">
-            <img src="https://i.ibb.co/b7ZVzYr/product-2.jpg" alt="Product" class="product-image">
-            <div class="product-info">
-                <h4 class="product-title">Apple skin peeler</h4>
-                <div class="rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <p class="product-price">$4.99</p>
-                <button class="btn">Add to Cart</button>
-            </div>
-          </div>
-        </div>
+        <!-- Dynamic Product Grid -->
+        <div class="product-grid"></div>
     </div>
     </a>
         <!-- Bottom Bar Footer -->
