add the image for luxury category and add the code to sort by category and add the css for the button

--- a/html/home.html
+++ b/html/home.html
@@ -75,11 +75,12 @@
                     <p>Mobile Phones & Gadgets</p>
                 </div>
                 <div class="category-item" data-category="luxury">
-                    <img src="https://via.placeholder.com/50" alt="Luxury">
+                    <img src="../image/luxury.avif" alt="Luxury">
                     <p>Luxury</p>
                 </div>
             </div>
         </div>
+        
 
         <a href="product.html" class="product-link">
         <!-- Dynamic Product Grid -->
