product now displays the seller name correctly

--- a/html/product.html
+++ b/html/product.html
@@ -58,13 +58,13 @@
         <div class="seller-info">
             <div class="seller-header">
                 <img class="seller-avatar" src="" alt="Seller Avatar">
-                <div class="seller-details">
+                 Seller name: <div class="seller-details">
                     <h3></h3>
                     <div class="seller-rating"></div>
                 </div>
             </div>
             
-            <div class="seller-stats">
+            <div class="seller-stats"> 
                 <div class="stat-item">
                     <i class="fas fa-clock"></i>
                     <span></span>
