add profile page and edit the nav bar for profile button

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -21,6 +21,7 @@
                 <a href="contactus.html" class="btn">Contact</a>
                 <a href="followus.html" class="btn">Follow Us</a>
                 <a href="chat.html" class="btn">Chats</a>
+                <a href="profile.html" class="btn">Profile</a>
             </div>
         </nav>
     </header>
