--- a/html/create.html
+++ b/html/create.html
@@ -19,6 +19,7 @@
             <a href="contactus.html" class="button">Contact</a>
             <a href="followus.html" class="button">Follow Us</a>
             <a href="chat.html" class="button">Chats</a>
+            <a href="profile.html" class="button">Profile</a>
         </div>
     </nav>
     
