--- a/html/followus.html
+++ b/html/followus.html
@@ -20,6 +20,7 @@
             <a href="contactus.html" class="button">Contact</a>
             <a href="followus.html" class="button">Follow Us</a>
             <a href="chat.html" class="button">Chats</a>
+            <a href="profile.html" class="button">Profile</a>
         </div>
     </nav>
     <!-- Add this below your navbar in followus.html -->
