the chat with seller identifies the seller and auto inputs in search bar so they can easily be found to chat with.

--- a/html/product.html
+++ b/html/product.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <button class="chat-seller-btn" onclick="location.href='chat.html'">
+            <button class="chat-seller-btn" id="chatSellerBtn">
                 <i class="fas fa-comments"></i> Chat with Seller
             </button>
         </div>
