--- a/html/home.html
+++ b/html/home.html
@@ -110,6 +110,7 @@
                 </div>
             </div>
         </footer>
+        <script type="module" src="../script/firebase.js"></script>
         <script type="module" src="../script/home.js"></script>
     </body>
 </html>
