--- a/html/product.html
+++ b/html/product.html
@@ -57,10 +57,10 @@
         <!-- Seller Information -->
         <div class="seller-info">
             <div class="seller-header">
-                <img class="seller-avatar" src="" alt="Seller Avatar">
+                <img class="seller-avatar" src="../image/profilePic.png">
                  Seller name: <div class="seller-details">
                     <h3></h3>
-                    <div class="seller-rating"></div>
+
                 </div>
             </div>
             
