change the point box to profile and code for the listing in profile page and also add missing button on the nav bar for chat page

--- a/html/profile.html
+++ b/html/profile.html
@@ -22,17 +22,22 @@
             <a href="profile.html" class="button active">Profile</a>
         </div>
     </nav>
-
     <!-- Profile Section -->
-<div class="profile-container">
-    <div class="profile-card">
-        <h1>Welcome</h1>
-        <h2 id="profile-name">Username</h2>
-        <p id="profile-email">email@example.com</p>
-        <p id="profile-bio">No bio available.</p>
-        <a href="edit.html" class="edit-profile-btn">Edit Profile</a>
+    <div class="profile-container">
+        <div class="profile-card">
+            <h1>Welcome</h1>
+            <h2 id="profile-name">Username</h2>
+            <p id="profile-email">email@example.com</p>
+            <p id="profile-bio">No bio available.</p>
+            <a href="edit.html" class="edit-profile-btn">Edit Profile</a>
+        </div>
     </div>
-</div>
+    <div class="rewards-container">
+        <div class="reward-box">
+            <h3>Points:</h3>
+            <p id="user-points">0</p>
+        </div>
+    </div>
     <!-- User Listings -->
     <div class="user-listings-container">
         <h2>Your Listings</h2>
