edit the lottie for login page

--- a/html/login.html
+++ b/html/login.html
@@ -70,6 +70,10 @@
       </div>
     </div>
     <!--script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
+    <div id="lottie-container" class="hidden">
+        <div id="lottie-animation"></div>
+    </div>
     <script src="../script/script.js" type="module"></script>
   </body>
 </html>
