change logo size

--- a/html/chat.html
+++ b/html/chat.html
@@ -13,7 +13,7 @@
     <div id="imageOverlay" class="image-overlay"></div>
     <nav class="navbar">
         <div class="logo-nav">
-            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
+            <img src="../image/mslogo.png" alt="MokeSell Logo">
             <h1>MokeSell</h1>
         </div>
         <div class="nav-links">
