--- a/html/home.html
+++ b/html/home.html
@@ -12,6 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
+            <button class="menu-toggle">&#9776;</button> <!--  Hamburger Menu -->
             <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell_Logo">
             <h1>MokeSell</h1>
         </div>
