follow us page is now mobile responsive

--- a/html/followus.html
+++ b/html/followus.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="../style/followus.css">
 </head>
 <body>
+    <div id="imageOverlay" class="image-overlay"></div>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
-            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
+            <button class="menu-toggle">&#9776;</button>
+            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell_Logo">
             <h1>MokeSell</h1>
         </div>
         <div class="nav-links">
@@ -23,7 +25,7 @@
             <a href="profile.html" class="button">Profile</a>
         </div>
     </nav>
-    <!-- Add this below your navbar in followus.html -->
+    
   <main class="follow-us-container">
     <div class="socials-header">
       <h2>Stay Connected with MokeSell</h2>
@@ -54,5 +56,8 @@
   
     <p class="footer-text">Join our growing community!</p>
   </main>
+
+    
+    <script src="../script/followus.js"></script>
 </body>
 </html>
