added lottie for add to cart

--- a/html/product.html
+++ b/html/product.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/product.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -75,6 +77,15 @@
                 <i class="fas fa-comments"></i> Chat with Seller
             </button>
         </div>
+    </div>
+
+    <div id="lottie-container" class="lottie-animation">
+        <dotlottie-player
+            src="https://lottie.host/a7956f7c-f9da-4531-811a-f50e81f04364/tNZ0eb3KS9.lottie"
+            background="transparent"
+            speed="1"
+            style="width: 300px; height: 300px"
+        ></dotlottie-player>
     </div>
 
     <script type="module" src="../script/product.js"></script>
