--- a/html/login.html
+++ b/html/login.html
@@ -71,8 +71,8 @@
     </div>
     <!--script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
-    <div id="lottie-container" class="hidden">
-        <div id="lottie-animation"></div>
+    <div id="lottie-container">
+        <div id="lottie-animation" style="width: 300px; height: 300px;"></div>
     </div>
     <script src="../script/script.js" type="module"></script>
   </body>
