--- a/html/product.html
+++ b/html/product.html
@@ -14,6 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
+            <button class="menu-toggle">&#9776;</button> <!--  Hamburger Menu -->
             <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell_Logo">
             <h1>MokeSell</h1>
         </div>
