--- a/html/profile.html
+++ b/html/profile.html
@@ -10,6 +10,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
+            <button class="menu-toggle">&#9776;</button>
             <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
             <h1>MokeSell</h1>
         </div>
