edit the code for validation

--- a/html/home.html
+++ b/html/home.html
@@ -25,19 +25,18 @@
             <a href="profile.html" class="button">Profile</a>
         </div>
     </nav>
-
     <!-- Search Bar -->
     <div class="search-container">
         <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Search products by name or description...">
-        <i class="fas fa-search search-icon"></i>
+            <input type="text" id="searchInput" placeholder="Search products by name or description...">
+            <i class="fas fa-search search-icon"></i>
         </div>
     </div>
     <!-- Create New Listing -->
-    <a href="create.html" class="no-underline">
-        <button class="create-listing-btn">Create New Listing</button>
-    </a>  
-    <!-- Product Grid -->
+    <div class="btn-container">
+        <a href="create.html" class="create-listing-btn">Create New Listing</a>
+    </div>
+        <!-- Product Grid -->
     <div class="small-container">
         <div class="row-2">
             <h2>Featured Products</h2>
@@ -71,12 +70,11 @@
             </div>
         </div>
         
-
         <a href="product.html" class="product-link">
         <!-- Dynamic Product Grid -->
         <div class="product-grid"></div>
+        </a>
     </div>
-    </a>
         <!-- Bottom Bar Footer -->
         <footer class="bottom-bar">
             <div class="footer-content">
