--- a/html/spin_wheel.html
+++ b/html/spin_wheel.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spin Wheel App</title>
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="../style/spin_wheel.css" />
+    <link rel="stylesheet" href="../style/spin_wheel.css">
   </head>
   <body>
     <div class="wrapper">
       <div class="container">
         <canvas id="wheel"></canvas>
         <button id="spin-btn">Spin</button>
-        <img src="../image/arrow.png" alt="spinner-arrow" />
+        <img src="../image/arrow.png" alt="spinner-arrow" >
       </div>
       <div id="final-value">
         <p>Click The Button To Spin Once</p>
