add the mobile query for the edit profile page

--- a/html/edit.html
+++ b/html/edit.html
@@ -9,6 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="logo-nav">
+            <button class="menu-toggle">&#9776;</button> <!--  Hamburger Menu -->
             <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
             <h1>MokeSell</h1>
         </div>
