change gthe comment for every file to make

--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
-            <button class="menu-toggle">&#9776;</button> <!--  Hamburger Menu -->
+            <button class="menu-toggle">&#9776;</button>  <!--  Hamburger Menu for the mobile query-->
             <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell_Logo">
             <h1>MokeSell</h1>
         </div>
