--- a/html/chat.html
+++ b/html/chat.html
@@ -13,7 +13,7 @@
     <div id="imageOverlay" class="image-overlay"></div>
     <nav class="navbar">
         <div class="logo-nav">
-            <button class="menu-toggle">&#9776;</button> <!--  Hamburger Menu -->
+            <button class="menu-toggle">&#9776;</button> <!--  Hamburger Menu for the mobile query-->
             <img src="../image/mslogo.png" alt="MokeSell Logo">
             <h1>MokeSell</h1>
         </div>
