made changes to the parts that caused errors in the html validator

--- a/html/product.html
+++ b/html/product.html
@@ -33,13 +33,13 @@
         <!-- Product Images -->
         <div class="product-images">
             <div class="main-image">
-                <img id="mainProductImage" src="" alt="Main Product Image">
+                <img id="mainProductImage" src="path/to/image.jpg" alt="Main Product Image">
             </div>
         </div>
 
         <!-- Product Info -->
         <div class="product-info">
-            <h1 class="product-title"></h1>
+            <h1 class="product-title">Product Name</h1>
             <div class="price-rating">
                 <p class="product-price"></p>
                 <div class="rating"></div>
@@ -61,10 +61,9 @@
         <!-- Seller Information -->
         <div class="seller-info">
             <div class="seller-header">
-                <img class="seller-avatar" src="../image/profilePic.png">
-                 Seller name: <div class="seller-details">
-                    <h3></h3>
-
+                <img class="seller-avatar" src="../image/profilePic.png" alt="Seller Avatar">
+                Seller name: <div class="seller-details">
+                    <h3>John Doe</h3>
                 </div>
             </div>
             
