updated the message captured notification with css

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -55,9 +55,9 @@
             </div>
             <button type="submit" class="submit-btn">Send Message</button>
         </form>
-        <div id="success-message" style="display: none; color: rgb(0, 145, 24); text-align: center; margin-top: 20px;">
+        <div id="success-message">
             Feedback successfully captured!
-        </div>
+          </div>
     </div>
 
     <script type="module">
